project upgrade - upgrade to spring-boot 3.0.3; - upgrade to springdoc-openapi 2.0.2; - upgrade to keycloak 21.0.0; - upgrade to mongo docker image 6.0.4; - upgrade to mysql docker image 5.7.41; - upgrade some npm dependencies; - update keycloak healthcheck in docker-compose; - update project-diagram.